add time control

--- a/src/com/mebigfatguy/pickcal/resources/strings.properties
+++ b/src/com/mebigfatguy/pickcal/resources/strings.properties
@@ -16,7 +16,7 @@
 // * under the License. 
 // */
 
- pickcal.ok=OK
+pickcal.ok=OK
 pickcal.cancel=Cancel
 pickcal.title=PickCal
 pickcal.jan=January
@@ -38,3 +38,5 @@ pickcal.wed=Wednesday
 pickcal.thu=Thursday
 pickcal.fri=Friday
 pickcal.sat=Saturday
+pickcal.am=AM
+pickcal.pm=PM
