--- a/src/com/mebigfatguy/pickcal/resources/strings.properties
+++ b/src/com/mebigfatguy/pickcal/resources/strings.properties
@@ -18,7 +18,7 @@
 
 pickcal.ok=OK
 pickcal.cancel=Cancel
-pickcal.title=PickCal
+pickcal.title=Select Date
 pickcal.jan=January
 pickcal.feb=February
 pickcal.mar=March
